# pythonprop

./: .gitignore  AUTHORS  ChangeLog  DEVNOTES.txt  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac  i18n.Readme  todo.txt
data/: Makefile.am  voacapgui.desktop  voacapgui.desktop.in
docs/user/help/: Makefile.am  voacapgui.omf.in
docs/user/help/C/: index.docbook  voacapgui.xml
man/: voa3DPlot.1  voaAreaPlot.1  voaAreaPlotgui.1  voaP2PPlot.1  voaP2PPlotgui.1  voacapgui.1
python3Prop/: README.md
python3Prop/src/: call.py  hamlocation.py  propAreaPlot.py  rec533Out.py
python3Prop/src/filters/: LFFilter.py
src/: Makefile.am  setup.py  voa3DPlot.in  voaAreaPlot.in  voaAreaPlotgui.in  voaP2PPlot.in  voaP2PPlotServer.in  voaP2PPlotgui.in  voacapgui.in
src/pythonprop/: Makefile.am  hamlocation.py  printingApp.py  scriptutil.py  ssnFetch.py  sun.py  treefilebrowser.py  vgzArchive.py  voa3DPlot.py  voaAntennaChooser.py  voaAntennaFile.py  voaAreaChooser.py  voaAreaPlot.py  voaAreaPlotgui.py  voaAreaRect.py  voaDatFile.py  voaDefaults.py  voaFile.py  voaMeth26Out.py  voaMultiPlot.py  voaOutFile.py  voaOutFilePrinter.py  voaP2PPlot.py  voaP2PPlotServer.py  voaP2PPlotgui.py  voaPlotFilePrinter.py  voaPlotWindow.py  voaSSNThumb.py  voaSiteChooser.py  voaTextFileViewDialog.py  voacapgui.py
src/pythonprop/area_templates/: Makefile.am  areaTemplates.txt
src/pythonprop/templates/: Makefile.am  ReadmeTemplates.txt  area_diurnal.py  area_next12m.py  area_nextmonths.py  area_userdefined.py
src/pythonprop/ui/: Makefile.am  voaAntennaChooser.ui  voaAreaChooser.ui  voaAreaPlotBox.ui  voaAreaPlotDialog.ui  voaAreaPlotViewDialog.ui  voaAreaPlotWindow.ui  voaP2PPlotBox.ui  voaP2PPlotDialog.ui  voaP2PPlotViewDialog.ui  voaP2PPlotWindow.ui  voaPlotDisplayDialog.ui  voaPropWindowBox.ui  voaSiteChooser.ui  voaTextFileViewDialog.ui  voacapgui.ui
