AC_INIT(pythonprop, 0.21)

AM_INIT_AUTOMAKE
AM_PATH_PYTHON([3.4])

GNOME_DOC_INIT

AC_CONFIG_FILES([
	Makefile
	data/Makefile
	data/voacapgui.desktop
        docs/user/help/Makefile
        src/Makefile
	src/pythonprop/Makefile
	src/pythonprop/templates/Makefile
	src/pythonprop/ui/Makefile
])
AC_OUTPUT
