## Process this file with automake to produce Makefile.in

## http://www.micahcarrick.com/tutorials/autotools-tutorial-python-gtk/getting-started.html#section_4

SUBDIRS=ui templates

pythonprop_PYTHON=	\
	voa3DPlot.py \
	voaAreaPlot.py \
	voaAreaPlotgui.py \
	voaP2PPlot.py \
	voaP2PPlotgui.py \
	voaP2PPlotServer.py \
	voacapgui.py \
	hamlocation.py \
	scriptutil.py \
	ssnFetch.py \
	treefilebrowser.py \
	voaAntennaChooser.py \
	voaAreaChooser.py \
	voaAreaRect.py \
	voaDatFile.py \
	voaDefaults.py \
	voaFile.py \
	voaMeth26Out.py \
	voaMultiPlot.py \
	voaOutFile.py \
	voaOutFilePrinter.py \
	voaPlotFilePrinter.py \
	voaPlotWindow.py \
	voaSiteChooser.py \
	voaSSNThumb.py \
	voaTextFileViewDialog.py \
	__init__.py


pythonpropdir = $(pythondir)/pythonprop
