uidir = $(pkgdatadir)/ui
ui_DATA = voacapgui.ui \
  voaAntennaChooser.ui \
  voaAreaChooser.ui \
	voaAreaPlotViewDialog.ui \
  voaPlotDisplayDialog.ui \
	voaP2PPlotViewDialog.ui \
  voaPropWindowBox.ui \
  voaSiteChooser.ui \
  voaTextFileViewDialog.ui \
  map.jpg \
  voacap.png


EXTRA_DIST = $(ui_DATA)
